...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="202dp"
...
